# vscp-works-qt

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG  CMakeLists.txt  CMakeLists.txt.user.69f014d  LICENSE  README.md  TODO.md  deploy-qt-linux.cmake.in  deploy-qt-windows.cmake.in  install.sh  vscp-works-qt_en_150.ts  vscpworks.pro
.github/workflows/: XML  _appimage.yml  appimage.yml  ccpp.yml  cmake-mac.yml  cmake.yml  googletest-checker.yml  make-appimage-qt6.yml  make-appimage.yml  msbuild.yml
cmake/: app_utils.cmake  update_build_version.cmake
cmake/modules/: FindLibWebSockets.cmake  FindPAHO.cmake  Findpaho-mqtt.cmake  findpaho-mqtt.cmake
database/: events.db  events.db.sqbpro  vscpevents.db.sqbpro
docs/: README.md  _coverpage.md  _sidebar.md  bootload_window.md  codes.txt  config_window.md  configure.md  connection_canal.md  connection_mqtt.md  connection_multicast.md  connection_socketcan.md  connection_tcpip.md  connection_udp.md  connection_ws1.md  connection_ws2.md  connections.md  demo.md  files_and_directory_structure.md  index.html  introduction.md  license.md  logging.md  mdf.md  scan_window.md  session_window.md  setting.md  setting_up_the_system.md  setting_up_the_system_on_linux.md  setting_up_the_system_on_macintosh.md  setting_up_the_system_on_raspberry_pi.md  setting_up_the_system_on_windows.md  settings.md  shortcuts.md  solving_problems.md  start.md  variables.xml
help/: .gitignore  README.md  generate.sh  vscp-works-qt.ghcp  works.qch
images/: background.xcf  bootloader_watermark.xcf  canal_watermark.xcf  notes.txt
install/: AppRun  README.md  build-inst-with-cmake.sh  build-with-cmake.sh  eventdb.sqlite3  install.sh  license.txt  setenv.sh  vscp-works-qt.desktop  vscpworks-version.js  vscpworks.json
install/linux/: README.md
install/share/: vscp_events.sqlite3
install/web/: vscpworks-version.js
install/windows/: README.md
install/windows/config/: config.xml  installscript.qs
man/: README.md  vscpworks.1.md
mdf/: beijing_2.xml  test_1.xml  ttt.json  ttt.xml
snap/: snapcraft.yaml
src/: .gitignore  CMakeLists.txt  TODO  TODO.todo  bootloaderwizard.cpp  bootloaderwizard.h  buildnumber.h  canal.ui  canalconfigwizard.cpp  canalconfigwizard.h  cdlgLog.ui  cdlgactionparam.cpp  cdlgactionparam.h  cdlgactionparam.ui  cdlgbootfirmware.cpp  cdlgbootfirmware.h  cdlgbootfirmware.ui  cdlgcanfilter.cpp  cdlgcanfilter.h  cdlgcanfilter.ui  cdlgconnsettingscanal.cpp  cdlgconnsettingscanal.h  cdlgconnsettingscanal.ui  cdlgconnsettingslocal.cpp  cdlgconnsettingslocal.h  cdlgconnsettingslocal.ui  cdlgconnsettingsmqtt.cpp  cdlgconnsettingsmqtt.h  cdlgconnsettingsmqtt.ui  cdlgconnsettingsmulticast.cpp  cdlgconnsettingsmulticast.h  cdlgconnsettingsmulticast.ui  cdlgconnsettingsrawcan.cpp  cdlgconnsettingsrawcan.h  cdlgconnsettingsrawcan.ui  cdlgconnsettingsrawmqtt.cpp  cdlgconnsettingsrawmqtt.h  cdlgconnsettingsrawmqtt.ui  cdlgconnsettingsrest.cpp  cdlgconnsettingsrest.h  (+295 more)
src/images/: watermark-canal.xcf
src/images/.github/workflows/: ccpp.yml
src/images/man/: make_man_pages  vscpworks.1
test/firmware/: Bejing_1_1_5.hex.txt
tools/: READ.md  canal_mdf_to_code.py  test.xml
ui/: cdlgconnsettingsmqtt.ui  cdlgconnsettingsmulticast.ui  cdlgconnsettingssocketcan.ui  cdlgconnsettingstcpip.ui  cdlgeditguid.ui  cdlgknownguid.ui  cdlglevel2filter.ui  cdlgmainsettings.ui  cdlgmqttpublish.ui  cdlgmqttsubscribe.ui  filter.ui  mainwindow.ui
video/: loading-firmware.webm
windows/: README.md
windows/expat/lib/: libexpat.exp  libexpat.lib
windows/include/: byteswap.h
windows/mosquitto/include/: mosquitto.h  mosquitto_broker.h
windows/mosquitto/lib/: mosquitto.lib
windows/mqtt/paho-c/lib/: paho-mqtt3a.lib  paho-mqtt3c.lib
windows/mqtt/paho-c/lib/cmake/eclipse-paho-mqtt-c/: eclipse-paho-mqtt-cConfig-debug.cmake  eclipse-paho-mqtt-cConfig-release.cmake  eclipse-paho-mqtt-cConfig.cmake  eclipse-paho-mqtt-cConfigVersion.cmake
windows/mqtt/paho-cpp/lib/: paho-mqttpp3-static.lib
windows/mqtt/paho-cpp/lib/cmake/PahoMqttCpp/: PahoMqttCppConfig.cmake  PahoMqttCppTargets-release.cmake  PahoMqttCppTargets.cmake
